# mips-rs

./: .gitignore  Cargo.toml  README.md  test.mips
mips-parser/: Cargo.toml  README.md  clipcopy  temp.txt
mips-parser/example-scripts/: solar.mips  test.mips
mips-parser/examples/: mips-parser-cli.rs  mips-parser-cli.yaml
mips-parser/src/: lib.rs  main.rs  mips.pest
mips-parser/tests/: args.rs  dev.rs  example-scripts.rs  example_scripts.rs  expr.rs  line.rs  mem.rs  program.rs  solar.rs  val.rs
mips-simulator/: Cargo.toml  README.md  README_.md
mips-simulator/src/: lib.rs  main.rs  simulator.rs  state.rs  test_utils.rs
mips-simulator/src/device/: device_kind.rs  devices.rs  mod.rs  param.rs  params.rs
mips-simulator/src/exec/: functions.rs  mod.rs
mips-simulator/src/simulator/: mod.rs
mips-simulator/src/state/: arg_reducer.rs  exec.rs  mod.rs
mips-simulator/src/watcher/: mod.rs
mips-simulator/tests/: device-kinds.ron  f_math.rs  f_stack.rs  simulator.rs
mips-simulator/tests/functions/: stack.rs
mips-simulator/tools/mips-simulator-cli/: Cargo.toml  README.md  devices.conf  devices.init  test.mips
mips-simulator/tools/mips-simulator-cli/src/: clap.yaml  main.rs
mips-simulator/tools/stationeering-to-ron/: Cargo.toml  stationeers-things-beta-min.json
mips-simulator/tools/stationeering-to-ron/src/: clap.yaml  device.rs  main.rs
mips-state/: Cargo.toml  README.md
mips-state/src/: builder.rs  device.rs  exec.rs  functions.rs  lib.rs  main.rs  state.rs
mips-validator/: Cargo.toml
mips-validator/src/: main.rs
mips-validator/stationeers/: devices.ron  functions.ron
myps/: Cargo.toml  README.md  clipcopy  test.myps  test2.myps  translator.ron
myps/src/: lib.rs  (+2 more)
src/: main.rs
tests/: mips-state.rs  state.rs
util/: Cargo.toml
(+85 files in other folders)
