[package]
name = "mips-state"
version = "0.1.0"
edition = "2018"

[lib]
name = "mips_simulator"
path = "src/lib.rs"

[[bin]]
name = "mips_simulator_test"
path = "src/main.rs"

[dependencies]
mips-parser = { path = "../mips-parser" }
util = { path = "../util" }
serde = { version = "*", features = ["derive"] }
ron = "*"
maplit = "1.0.2"
#thiserror = "1.0.20"

[dev-dependencies]
clap = { version = "*", features = ["yaml"] }
rustyline = "*"

