[package]
name = "mips-simulator"
version = "0.1.0"
edition = "2018"

[dependencies]
mips-parser = { path = "../mips-parser" }
util = { path = "../util" }
serde = { version = "*", features = ["derive"] }
ron = "*"
maplit = "1.0.2"
serde_json = "*"
itertools = "0.9.0"
#thiserror = "1.0.20"

[dev-dependencies]
clap = { version = "*", features = ["yaml"] }
rustyline = "*"

